--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dotenv": "^17.2.3",
     "lucide-react": "^0.534.0",
     "mammoth": "^1.10.0",
-    "next": "15.4.5",
+    "next": "^16.0.7",
     "pdfjs-dist": "3.11.174",
     "puppeteer": "^24.31.0",
     "react": "19.1.0",
