--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@sparticuz/chromium": "^143.0.0",
     "better-auth": "^1.4.5",
     "canvas": "^3.2.0",
     "cheerio": "^1.1.2",
@@ -26,6 +27,7 @@
     "next": "^16.0.7",
     "pdfjs-dist": "3.11.174",
     "puppeteer": "^24.31.0",
+    "puppeteer-core": "^24.32.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.4.0",
