--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "lenis": "^1.3.15",
     "lucide-react": "^0.534.0",
     "mammoth": "^1.10.0",
     "next": "^16.0.7",
