--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@sparticuz/chromium": "^143.0.0",
+    "@vercel/analytics": "^1.6.1",
     "better-auth": "^1.4.5",
     "canvas": "^3.2.0",
     "cheerio": "^1.1.2",
@@ -26,6 +27,7 @@
     "lucide-react": "^0.534.0",
     "mammoth": "^1.10.0",
     "next": "^16.0.7",
+    "openai": "^6.10.0",
     "pdfjs-dist": "3.11.174",
     "puppeteer": "^24.31.0",
     "puppeteer-core": "^24.32.0",
