fixed byok bug, and added extension button on hero.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lucide-react": "^0.534.0",
     "mammoth": "^1.10.0",
     "next": "^16.0.10",
+    "nodemailer": "^7.0.12",
     "openai": "^6.10.0",
     "pdfjs-dist": "3.11.174",
     "puppeteer": "^24.31.0",
@@ -42,6 +43,7 @@
     "@prisma/client": "^5.22.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/webpack": "^5.28.5",
